# feroxmute

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  costs.json  log
.github/workflows/: ci.yml
docker/: Dockerfile  compose.yml
docs/plans/: 2025-01-19-docker-shell-tool-design.md  2025-01-19-docker-shell-tool-impl.md  2025-01-19-minimal-demo-wiring-design.md  2025-01-19-minimal-demo-wiring-impl.md  2025-01-20-engagement-limitations-design.md  2025-01-20-engagement-limitations-impl.md  2025-12-17-feroxmute-design.md  2025-12-17-feroxmute-implementation.md  2025-12-18-multi-target-sast-design.md  2025-12-18-multi-target-sast-implementation.md  2025-12-19-config-wizard-design.md  2025-12-19-config-wizard-implementation.md  2025-12-19-orchestrator-agent-spawning-design.md  2025-12-19-orchestrator-agent-spawning-impl.md  2025-12-20-agent-status-visibility-design.md  2025-12-20-agent-status-visibility-impl.md  2025-12-20-orchestrator-rig-tools-design.md  2025-12-21-agent-summary-scratchpad-design.md  2025-12-21-agent-summary-scratchpad-impl.md  2025-12-21-dynamic-agent-keys-thinking-impl.md  2025-12-21-dynamic-agent-keys-thinking.md  2025-12-21-instruction-flag-design.md  2025-12-21-ollama-provider-refactor.md  2025-12-21-token-cost-tracking.md  2025-12-21-tool-call-tracking-design.md  2025-12-21-tool-output-toggle-design.md  2025-12-21-tool-output-toggle-impl.md  2025-12-27-memory-view-design.md  2025-12-27-memory-view-impl.md  2025-12-28-sast-route-discovery-design.md  2025-12-28-sast-route-discovery-impl.md  2025-12-28-sast-view-design.md  2025-12-28-sast-view-impl.md  2025-12-29-html-pdf-export-design.md  2025-12-29-limitations-redesign-design.md  2025-12-29-limitations-redesign-impl.md  2025-12-29-sast-findings-wiring-design.md  2025-12-29-script-tool-design.md  2025-12-29-session-persistence-design.md  2025-12-29-session-persistence-impl.md  (+15 more)
feroxmute-cli/: Cargo.toml
feroxmute-cli/src/: args.rs  main.rs  runner.rs
feroxmute-cli/src/tui/: app.rs  channel.rs  colors.rs  events.rs  mod.rs  runner.rs
feroxmute-cli/src/tui/widgets/: agent_detail.rs  dashboard.rs  memory.rs  memory_modal.rs  mod.rs  sast.rs  timeline.rs
feroxmute-cli/src/wizard/: mod.rs  screens.rs  state.rs  widgets.rs
feroxmute-core/: Cargo.toml  pricing.toml  prompts.toml
feroxmute-core/playbooks/: command-injection.md  crypto.md  csrf.md  deserialization.md  graphql.md  jwt-attacks.md  lfi-rfi.md  nosql-injection.md  race-conditions.md  sql-injection.md  ssrf.md  ssti.md  websockets.md  windows-ad.md  windows-web.md  xss.md  xxe.md
feroxmute-core/src/: config.rs  error.rs  lib.rs  limitations.rs  pricing.rs
feroxmute-core/src/agents/: event_bus.rs  mod.rs  orchestrator.rs  prompts.rs  recon.rs  registry.rs  report.rs  sast.rs  scanner.rs  traits.rs
feroxmute-core/src/docker/: builder.rs  container.rs  mod.rs
feroxmute-core/src/mcp/: http.rs  mod.rs  protocol.rs  server.rs  transport.rs
feroxmute-core/src/mcp/tools/: dedup.rs  docker_shell.rs  finding.rs  memory.rs  mod.rs  orchestrator.rs  playbook.rs  report.rs  script.rs
feroxmute-core/src/providers/: anthropic.rs  azure.rs  cohere.rs  deepseek.rs  definitions.rs  factory.rs  gemini.rs  macros.rs  mira.rs  mod.rs  ollama.rs  openai.rs  perplexity.rs  retry.rs  traits.rs  xai.rs
feroxmute-core/src/providers/cli_agent/: acp_client.rs  bridge.rs  config.rs  mod.rs  provider.rs
feroxmute-core/src/reports/: generator.rs  mod.rs  models.rs
feroxmute-core/src/state/: metrics.rs  migrations.rs  mod.rs  models.rs  schema.rs  session.rs
feroxmute-core/src/targets/: collection.rs  detection.rs  mod.rs  types.rs
feroxmute-core/src/tools/: executor.rs  llm_pentest_context.rs  llm_probe.rs  llm_scanners.rs  memory.rs  mod.rs  orchestrator.rs  playbook.rs  report.rs  script.rs  shell.rs
feroxmute-core/src/tools/sast/: ast_grep.rs  gitleaks.rs  grype.rs  mod.rs  routes.rs  semgrep.rs
feroxmute-core/tests/: cli_agent_provider.rs  event_flow.rs  session_persistence.rs
