[workspace]
resolver = "2"
members = ["feroxmute-core", "feroxmute-cli"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "BSD 3-clause"
authors = ["Risto Viitanen"]
description = "LLM-powered penetration testing framework with autonomous agents"
repository = "https://github.com/dilaz/feroxmute"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
thiserror = "2"
anyhow = "1"
miette = { version = "7", features = ["fancy"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# LLM
rig-core = "0.27"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Docker
bollard = "0.18"
tar = "0.4"
hyper = { version = "1", features = ["http1", "server"] }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# CLI
clap = { version = "4", features = ["derive"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1"
futures = "0.3"
dirs = "5"
backon = "1"
hyper-util = { version = "0.1", features = ["tokio", "http1"] }
http-body-util = "0.1"

[workspace.lints.clippy]
# Error handling & safety
unwrap_used = "warn"
expect_used = "warn"
indexing_slicing = "warn"
panic = "warn"

# Code quality
clone_on_ref_ptr = "warn"
redundant_clone = "warn"
inefficient_to_string = "warn"
needless_pass_by_value = "warn"

# Debug leftovers
dbg_macro = "warn"
todo = "warn"
print_stdout = "warn"

# Documentation
missing_errors_doc = "warn"
missing_panics_doc = "warn"
