[package]
name = "feroxmute-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "feroxmute"
path = "src/main.rs"

[dependencies]
feroxmute-core = { path = "../feroxmute-core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
miette = { workspace = true, features = ["fancy"] }
tracing.workspace = true
tracing-subscriber.workspace = true
ratatui.workspace = true
crossterm.workspace = true
clap.workspace = true
uuid.workspace = true
chrono = "0.4"
dirs.workspace = true
tokio-util = { version = "0.7.17", features = ["rt"] }
bollard.workspace = true
rusqlite.workspace = true

[lints]
workspace = true
