[package]
name = "feroxmute-core"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
miette.workspace = true
tracing.workspace = true
rig-core.workspace = true
rusqlite.workspace = true
bollard.workspace = true
tar.workspace = true
hyper.workspace = true
chrono.workspace = true
uuid.workspace = true
async-trait.workspace = true
futures.workspace = true
dirs.workspace = true
tokio-util = { version = "0.7.17", features = ["rt", "compat"] }
regex = "1.12.2"
once_cell = "1.21.3"
backon.workspace = true
walkdir = "2"
printpdf = "0.7"
agent-client-protocol = { version = "0.9.3", features = ["unstable"] }
which = "8.0.0"
hyper-util.workspace = true
http-body-util.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3"

[lints]
workspace = true
